--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,8 @@
         "string": "cpp",
         "unordered_map": "cpp",
         "vector": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "anonymizer"
+    ]
 }
